# webworm

./: .gitignore  Cargo.toml  bookmarks.ron  main.py
base/: Cargo.toml
base/src/: bookmark.rs  io.rs  lib.rs
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
gui/: package-lock.json  package.json
gui/src/: index.html  main.js  styles.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: js_bookmark.rs  main.rs  state.rs
src/: bookmark.rs  bookmark_link.rs  bookmarks.rs  cli.rs  filter.rs  gui.rs  icons.rs  id.rs  identifier.rs  lib.rs  link.rs  loading.rs  main.rs  message.rs  messages.rs  movie.rs  movie_details.rs  response.rs  save.rs  state.rs  task.rs  tmdb.rs  update.rs  view.rs
src/gui/: message.rs  mod.rs
