[package]
name = "webworm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.0"
iced = { git = "https://github.com/iced-rs/iced.git", features = ["async-std", "debug"]}
iced_aw = {git = "https://github.com/iced-rs/iced_aw"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories-next = "2.0"
tracing-subscriber = "0.3"
once_cell = "1.19.0"
reqwest = {version = "0.11.23", features = ["blocking"]}
anyhow = "1.0.79"
tracing = "0.1.40"
