[package]
name = "webworm"
version = "0.1.0"
edition = "2021"
description = "Bookmarking tool for tv shows"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.0"
iced = { version = "0.12", features = ["async-std", "image"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories-next = "2.0"
tracing-subscriber = "0.3"
once_cell = "1.19.0"
reqwest = {version = "0.11.23", features = ["blocking"]}
anyhow = "1.0.79"
tracing = "0.1.40"
