[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = {path = "../base"}
clap = {version = "4.2.2" ,features = ["derive"]}
anyhow = "*"
log = "0.4.17"
simplelog = "0.12.1"
serde = "1.0.160"
ron = "0.8"
webpage = "1.5"
serde_json = "1.0.96"
glob = "0.3.1"
